--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -69,6 +69,12 @@
   aspect-ratio: 4 / 3;
 }
 
+.hero .hero-picture-wrapper {
+  display: contents;
+  margin: 0;
+  padding: 0;
+}
+
 .hero img {
   object-fit: contain;
   width: 100%;
@@ -236,6 +242,7 @@
 @media (width >= 900px) {
   .hero {
     padding: 10px 60px 80px;
+    min-height: 540px;
   }
 
   .hero-container .hero-wrapper {
@@ -268,6 +275,10 @@
 
   .hero .button-group {
     width: auto;
+  }
+
+  .hero:not([data-block-status="loaded"]) {
+    visibility: hidden;
   }
 }
 
